


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.procoders.spanisholivetechnology.fragments.BiomasaFragmentDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="85"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:weightSum="2">


            <Button
                android:id="@+id/btnLogin"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_gravity="end"
                android:background="@color/transparent"
                android:drawableRight="@drawable/ic_option_ok"
                android:drawableTint="@color/colorWhite"
                android:padding="10sp"
                android:text="@string/btnLogin"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/arial"/>

        </android.support.design.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/arial"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:text="@string/LoginDescripcion"
                android:textSize="@dimen/optionTittleSizeMin"
                android:textColor="@color/colorWhite"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:text="@string/txtLoginPresentacion"
                android:textSize="@dimen/optionTittleSizeMin"
                android:textColor="@color/colorWhite"
                android:gravity="center"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="30"
            android:layout_marginTop="70sp"
            android:fontFamily="@font/arial">

            <AutoCompleteTextView
                android:id="@+id/edtMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:focusedByDefault="true"
                android:fontFamily="@font/arial"
                android:hint="@string/edtEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/arial"
                android:hint="@string/edtNombre"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:fontFamily="@font/arial"
                android:hint="@string/edtTelefono"
                android:inputType="number"
                android:maxLength="15"
                android:maxLines="1"
                android:singleLine="true" />


        </LinearLayout>

    </LinearLayout>
</FrameLayout>


    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="30"
        android:layout_marginTop="70sp"
        android:fontFamily="@font/arial">


        <RadioGroup
            android:id="@+id/GrupoDet7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="46dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btnSaveBiomasa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.986">

            <RadioButton

                android:id="@+id/ingles"
                android:layout_width="135dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:checked="false"
                android:fontFamily="@font/arial"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/ingles"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textSize="@dimen/optionRbtnSizeMax" />

            <RadioButton
                android:id="@+id/español"
                android:layout_width="117dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:fontFamily="@font/arial"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/español"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textSize="@dimen/optionRbtnSizeMax" />

            <RadioButton
                android:id="@+id/frances"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:fontFamily="@font/arial"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/frances"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textSize="@dimen/optionRbtnSizeMax" />
        </RadioGroup>

    </LinearLayout>-->

